# transformer-implementation

./: .gitignore  README.md  pyproject.toml
examples/attention_visualization/: visualize.py
scripts/: setup_project.py
src/transformer/: attention.py
src/transformer/tests/: test_attention.py
src/transformer/v1_basic_attention/: attention.py  test_attention.py
tutorials/tutorial_1_basic_attention/: 1.Understanding_Basic_Attention.md
