[tool.poetry]
name = "transformer-implementation"
version = "0.1.0"
description = "Implementation of transformer architecture"
authors = ["Paul Loupe <ploupe@iu.edu>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.0"
numpy = "^1.24.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
