[tool.poetry]
name = "transformer-implementation"
version = "0.1.0"
description = ""
authors = ["Paul Loupe <ploupe@iu.edu>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"